codegen/ui_tests/rhai_fn_index_setter_multiple.stderr
error: conflicting index_set
  --> ui_tests/rhai_fn_index_setter_multiple.rs:12:40
   |
12 |     #[rhai_fn(name = "foo", index_set, index_set)]
   |                                        ^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_module`
  --> ui_tests/rhai_fn_index_setter_multiple.rs:23:8
   |
23 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of unresolved module or unlinked crate `test_module`
   |
   = help: if you wanted to use a crate named `test_module`, use `cargo add test_module` to add it to your `Cargo.toml`
